# slack_bot

./: .pre-commit-config.yaml  CLAUDE.md  blocks.py  pyproject.toml  slack_bot.py
.github/workflows/: auto_assign.yml  quality.yaml
